# Telegram_AI_BOT-repo

./: .env.example  CODEBASE_DOCUMENTATION.md  README.md  catalog.example.json  catalog.json  omarsidanitelegram.code-workspace  pyproject.toml
src/tgbot/: __init__.py  bot.py  catalog.py  config.py  gemini_check.py  gemini_client.py  main.py  orders.py  schemas.py  telegram_check.py
