[project]
name = "telegram-gemini-order-bot"
version = "0.1.0"
description = "Telegram bot that uses Gemini to answer catalog questions and submit confirmed orders."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
tgbot = "tgbot.main:main"
tgbot-check-telegram = "tgbot.telegram_check:main"
tgbot-check-gemini = "tgbot.gemini_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tgbot"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
